--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,16 +7,17 @@ server.port=8082
 # ===============================
 spring.datasource.url=jdbc:mysql://localhost:3306/procurement_db?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
 spring.datasource.username=root
-spring.datasource.password=MySQL
+spring.datasource.password=29July@2005
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # ===============================
 # JPA / Hibernate
 # ===============================
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+# Dialect auto-detected by Hibernate (no need to specify for MySQL)
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.open-in-view=false
 
 # ===============================
 # Logging
@@ -40,3 +41,11 @@ springdoc.swagger-ui.path=/swagger-ui.html
 # ===============================
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
+
+# ===============================
+# JWT Configuration
+# ===============================
+# Must be >= 256 bits (32 characters)
+jwt.secret=ProcurementSystemSuperSecretKeyForJwtSigning2026!
+# Expiration set to 7 days (7 * 24 * 60 * 60000)
+jwt.expiration=604800000
